# raspberry_monitor

./: .gitignore  README.md  config.yaml  docker-compose.yml
app/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  l10n.yaml  mason.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: app.dart  app_router.dart  bootstrap.dart  home_page.dart  injectable_module.dart  injection.config.dart  injection.dart  main_development.dart  main_production.dart  main_staging.dart
app/lib/core/: core.dart
app/lib/core/datasources/: test.md
app/lib/core/design_system/: design_system.dart
app/lib/core/error/: exceptions.dart  failures.dart
app/lib/core/network/: network_info.dart
app/lib/l10n/: app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  intl_de.arb  intl_en.arb
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/web/: index.html
mosquitto_config/: mosquitto.conf
pi-mqtt-gpio/: pyproject.toml
pi-mqtt-gpio/src/pi_mqtt_gpio/: __init__.py
pi-mqtt-gpio/src/pi_mqtt_gpio/client/: __init__.py  connection.py  devices.py
pi-mqtt-gpio/src/pi_mqtt_gpio/server/: __init__.py  broker.py  broker_config.yaml  config.yaml  config_loader.py  hardware.py  main.py  models.py  mqtt.py  rpc_handler.py  security.py  telemetry.py
pi-mqtt-gpio/tests/: conftest.py  test_imports.py
pi-mqtt-gpio/tests/client/: test_client.py
pi-mqtt-gpio/tests/server/: test_broker.py  test_hardware.py  test_main.py  test_mqtt_integration.py  test_rpc_handler.py  test_security.py
piMqttGpio/: pyvenv.cfg
(+104 files in other folders)
