[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-mqtt-gpio"
version = "0.3.0"
description = "Secure, async MQTT v5 gatekeeper and RPC client for Raspberry Pi GPIOs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "freudenfranz", email = "freudendthaler.franz@gmail.com" }
]
# These are dependencies that work on ANY machine
dependencies = [
    "amqtt>=0.11",
    "paho-mqtt>=2.0",
    "gpiozero>=2.0",
]

[project.optional-dependencies]
# These are ONLY needed on the Raspberry Pi
hardware = [
    "rpi-lgpio>=0.6",
]
# These are ONLY needed for development/testing
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
]